Fix animations in Reversi by wrapping grid elements

--- a/games-vue-client/src/assets/games-style.css
+++ b/games-vue-client/src/assets/games-style.css
@@ -12,6 +12,14 @@
   height: 100%;
 }
 
+.grid-element-wrapper * {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: 0;
+  transform: translate(-50%, -50%);
+}
+
 .piece-0 {
   background-color: blue;
 }
@@ -29,6 +37,7 @@
 
 .actionable {
   cursor: pointer;
+  z-index: 70;
 }
 
 .actionable.piece {
@@ -81,7 +90,6 @@
 
 .piece {
   background-size: cover;
-  z-index: 40;
   width: 100%;
   height: 100%;
 }
@@ -162,4 +170,8 @@
 .fade-enter,
 .fade-leave-to {
   opacity: 0;
+}
+
+.game-piece-color-change .piece {
+  transition: background-color 1.5s;
 }
